<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigScreen" >

    <TextView
        android:id="@+id/frameRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="15dp"
        android:text="@string/frame_rate" />

    <SeekBar
        android:id="@+id/frameRateAdjuster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/backgroundColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp"
        android:drawablePadding="20dp"
        android:text="@string/background_color" >
    </TextView>

    <TextView
        android:id="@+id/redColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/red" />

    <SeekBar
        android:id="@+id/redAdjuster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <TextView
        android:id="@+id/greenColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/green" />

    <SeekBar
        android:id="@+id/greenAdjuster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <TextView
        android:id="@+id/blueColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/blue" />

    <SeekBar
        android:id="@+id/blueAdjuster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backToMainScreen"
            android:text="@string/apply" />
    </LinearLayout>

</LinearLayout>