<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    android:orientation="vertical"
    tools:context=".AnimateScreen">
    
    <TextView
        android:id="@+id/fileName"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    
    <FrameLayout 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="0dip" 
        android:id="@+id/sc" 
        android:layout_weight="1.0"     
        android:background="#0099cc"
        android:layout_marginBottom="10dp">
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="playAnimation"
            android:text="@string/play" 
            android:id="@+id/play" />
     
        <Button 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
	        android:text="@string/load" 
	        android:onClick="loadAnimation"/>     
	    <Button 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
	        android:text="@string/config" 
	        android:onClick="configAnimation"/>    
    </LinearLayout>
</LinearLayout>